# Lexic_Analizer

./: .gitignore  ASTnode.py  README.md  Readme.txt  __main__.py  code_generator.py  ex1.por  exceptions.py  grammar.py  pyproject.toml  semantic_analyzer.py  symbol_table.py  tokens.py
