[tool.poetry]
name = "lexic-analizer"
version = "0.1.0"
description = ""
authors = ["NicolasFloresF <nick.lasff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ply = "^3.11"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
